--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
   },
   "require": {
     "php": ">=7.1.0",
-    "spryker/kernel": "^3.0.0",
+    "spryker/kernel": "^3.0.0"
   },
   "autoload": {
     "psr-0": {
